NanoCore.Templates/content/NanoCore.Api.Public/.kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: %SERVICE_NAME%
  namespace: %KUBERNETES_NAMESPACE%
  labels:
    app: %SERVICE_NAME%
spec:
  replicas: %KUBERNETES_REPLICA_COUNT%
  revisionHistoryLimit: %KUBERNETES_REPLICA_HISTORY_COUNT%
  selector:
    matchLabels:
      app: %SERVICE_NAME%
  template:
    metadata:
      labels:
        app: %SERVICE_NAME%
    spec:
      automountServiceAccountToken: false
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 2000
        fsGroup: 2000
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app: %SERVICE_NAME%
      nodeSelector:
        nodepool.compute: %KUBERNETES_NODEPOOL_COMPUTE%
        kubernetes.io/os: linux
      containers:
      - name: %SERVICE_NAME%
        image: %CONTAINER_REGISTRY_HOST%/%IMAGE_NAME%:%VERSION%
        ports:
        - containerPort: 8080
        imagePullPolicy: Always
        resources:
          requests:
            memory: %KUBERNETES_MEMORY_REQUEST%
            cpu: %KUBERNETES_CPU_REQUEST%
          limits:
            memory: %KUBERNETES_MEMORY_LIMIT%
            cpu: %KUBERNETES_CPU_LIMIT%
        securityContext:
          runAsUser: 1000
          runAsGroup: 2000
          privileged: false
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          capabilities:
            drop:
            - ALL
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8080
            scheme: HTTP
          periodSeconds: 10
          initialDelaySeconds: 30
          timeoutSeconds: 2
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8080
            scheme: HTTP
          periodSeconds: 5
          initialDelaySeconds: 20
          timeoutSeconds: 2
