NanoCore.Templates/content/NanoCore.Api.Public/.kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: %SERVICE_NAME%
  namespace: %KUBERNETES_NAMESPACE%
  labels:
    app: %SERVICE_NAME%
spec:
  ports:
  - name: http
    port: 8080
  selector:
    app: %SERVICE_NAME%
  type: ClusterIP
